wfmp-manager/src/main/java/br/health/workflow/core/parser/antlr4/HealthWfMSParser.java
// Generated from br\health\workflow\core\parser\antlr4\HealthWfMS.g4 by ANTLR 4.2
package br.health.workflow.core.parser.antlr4;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HealthWfMSParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__37=1, T__36=2, T__35=3, T__34=4, T__33=5, T__32=6, T__31=7, T__30=8, 
		T__29=9, T__28=10, T__27=11, T__26=12, T__25=13, T__24=14, T__23=15, T__22=16, 
		T__21=17, T__20=18, T__19=19, T__18=20, T__17=21, T__16=22, T__15=23, 
		T__14=24, T__13=25, T__12=26, T__11=27, T__10=28, T__9=29, T__8=30, T__7=31, 
		T__6=32, T__5=33, T__4=34, T__3=35, T__2=36, T__1=37, T__0=38, NUMBER=39, 
		DECIMAL=40, IDENTIFIER=41, TRUE=42, FALSE=43, LPAREN=44, RPAREN=45, MULT=46, 
		DIV=47, PLUS=48, MINUS=49, AND=50, OR=51, WS=52;
	public static final String[] tokenNames = {
		"<INVALID>", "'sync'", "'decimal'", "'waitTime'", "'start task'", "'currentDayWeek'", 
		"'integer'", "'onReceive'", "'{'", "'target'", "'='", "'}'", "'call'", 
		"'FromWorkflow'", "'<='", "'end.workflow.export'", "'task'", "'between'", 
		"'isFalse'", "','", "'.'", "'onReturn'", "'->'", "'case'", "'currentDate'", 
		"'end.workflow'", "'boolean'", "'>='", "'<'", "'with'", "'>'", "'until'", 
		"'workflow'", "'<>'", "'currentTime'", "'string'", "'FromService'", "'isTrue'", 
		"'equal'", "NUMBER", "DECIMAL", "IDENTIFIER", "'true'", "'false'", "'('", 
		"')'", "'*'", "'/'", "'+'", "'-'", "'and'", "'or'", "WS"
	};
	public static final int
		RULE_root = 0, RULE_firstPlaceDef = 1, RULE_otherPlaceDef = 2, RULE_trasitionDef = 3, 
		RULE_eventDef = 4, RULE_conditionDef = 5, RULE_actionDef = 6, RULE_eventType = 7, 
		RULE_kind = 8, RULE_primitive = 9, RULE_struct = 10, RULE_expression = 11, 
		RULE_operand = 12, RULE_operator = 13, RULE_arithmetic_expr = 14, RULE_comparison_expr = 15, 
		RULE_logical_entity = 16, RULE_targetDef = 17, RULE_callDef = 18, RULE_syncCallDef = 19, 
		RULE_statement = 20, RULE_booleanFunction = 21, RULE_timeFunction = 22, 
		RULE_value = 23, RULE_object = 24, RULE_endPoint = 25, RULE_attribute = 26, 
		RULE_numeric_entity = 27;
	public static final String[] ruleNames = {
		"root", "firstPlaceDef", "otherPlaceDef", "trasitionDef", "eventDef", 
		"conditionDef", "actionDef", "eventType", "kind", "primitive", "struct", 
		"expression", "operand", "operator", "arithmetic_expr", "comparison_expr", 
		"logical_entity", "targetDef", "callDef", "syncCallDef", "statement", 
		"booleanFunction", "timeFunction", "value", "object", "endPoint", "attribute", 
		"numeric_entity"
	};

	@Override
	public String getGrammarFileName() { return "HealthWfMS.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HealthWfMSParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class RootContext extends ParserRuleContext {
		public FirstPlaceDefContext firstPlaceDef() {
			return getRuleContext(FirstPlaceDefContext.class,0);
		}
		public OtherPlaceDefContext otherPlaceDef(int i) {
			return getRuleContext(OtherPlaceDefContext.class,i);
		}
		public List<OtherPlaceDefContext> otherPlaceDef() {
			return getRuleContexts(OtherPlaceDefContext.class);
		}
		public TerminalNode IDENTIFIER() { return getToken(HealthWfMSParser.IDENTIFIER, 0); }
		public RootContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_root; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterRoot(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitRoot(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitRoot(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RootContext root() throws RecognitionException {
		RootContext _localctx = new RootContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_root);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(56); match(32);
			setState(57); match(IDENTIFIER);
			setState(58); match(8);
			setState(59); firstPlaceDef();
			setState(61); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(60); otherPlaceDef();
				}
				}
				setState(63); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==16 );
			setState(65); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FirstPlaceDefContext extends ParserRuleContext {
		public List<ActionDefContext> actionDef() {
			return getRuleContexts(ActionDefContext.class);
		}
		public ActionDefContext actionDef(int i) {
			return getRuleContext(ActionDefContext.class,i);
		}
		public FirstPlaceDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_firstPlaceDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterFirstPlaceDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitFirstPlaceDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitFirstPlaceDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FirstPlaceDefContext firstPlaceDef() throws RecognitionException {
		FirstPlaceDefContext _localctx = new FirstPlaceDefContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_firstPlaceDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(67); match(4);
			setState(68); match(8);
			setState(70); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(69); actionDef();
				}
				}
				setState(72); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 1) | (1L << 9) | (1L << 12) | (1L << 15) | (1L << 25))) != 0) );
			setState(74); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OtherPlaceDefContext extends ParserRuleContext {
		public List<TrasitionDefContext> trasitionDef() {
			return getRuleContexts(TrasitionDefContext.class);
		}
		public TrasitionDefContext trasitionDef(int i) {
			return getRuleContext(TrasitionDefContext.class,i);
		}
		public TerminalNode IDENTIFIER() { return getToken(HealthWfMSParser.IDENTIFIER, 0); }
		public OtherPlaceDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_otherPlaceDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterOtherPlaceDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitOtherPlaceDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitOtherPlaceDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OtherPlaceDefContext otherPlaceDef() throws RecognitionException {
		OtherPlaceDefContext _localctx = new OtherPlaceDefContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_otherPlaceDef);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(76); match(16);
			setState(77); match(IDENTIFIER);
			setState(78); match(8);
			setState(80); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(79); trasitionDef();
				}
				}
				setState(82); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==23 );
			setState(84); match(11);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TrasitionDefContext extends ParserRuleContext {
		public ConditionDefContext conditionDef() {
			return getRuleContext(ConditionDefContext.class,0);
		}
		public EventDefContext eventDef() {
			return getRuleContext(EventDefContext.class,0);
		}
		public ActionDefContext actionDef() {
			return getRuleContext(ActionDefContext.class,0);
		}
		public TrasitionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trasitionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterTrasitionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitTrasitionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitTrasitionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TrasitionDefContext trasitionDef() throws RecognitionException {
		TrasitionDefContext _localctx = new TrasitionDefContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_trasitionDef);
		try {
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(86); match(23);
				setState(87); eventDef();
				setState(88); match(8);
				setState(89); conditionDef();
				setState(90); match(8);
				setState(91); actionDef();
				setState(92); match(11);
				setState(93); match(11);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(95); match(23);
				setState(96); eventDef();
				setState(97); match(8);
				setState(98); actionDef();
				setState(99); match(11);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventDefContext extends ParserRuleContext {
		public EventTypeContext eventType() {
			return getRuleContext(EventTypeContext.class,0);
		}
		public EventDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterEventDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitEventDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitEventDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventDefContext eventDef() throws RecognitionException {
		EventDefContext _localctx = new EventDefContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eventDef);
		try {
			setState(105);
			switch (_input.LA(1)) {
			case 7:
			case 21:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); eventType();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionDefContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ConditionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterConditionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitConditionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitConditionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionDefContext conditionDef() throws RecognitionException {
		ConditionDefContext _localctx = new ConditionDefContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_conditionDef);
		try {
			setState(110);
			switch (_input.LA(1)) {
			case 29:
				enterOuterAlt(_localctx, 1);
				{
				setState(107); match(29);
				setState(108); expression(0);
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ActionDefContext extends ParserRuleContext {
		public List<TargetDefContext> targetDef() {
			return getRuleContexts(TargetDefContext.class);
		}
		public List<CallDefContext> callDef() {
			return getRuleContexts(CallDefContext.class);
		}
		public CallDefContext callDef(int i) {
			return getRuleContext(CallDefContext.class,i);
		}
		public TargetDefContext targetDef(int i) {
			return getRuleContext(TargetDefContext.class,i);
		}
		public ActionDefContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_actionDef; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterActionDef(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitActionDef(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitActionDef(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ActionDefContext actionDef() throws RecognitionException {
		ActionDefContext _localctx = new ActionDefContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_actionDef);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115); 
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(112); targetDef();
					setState(113); callDef();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(117); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			} while ( _alt!=2 && _alt!=-1 );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EventTypeContext extends ParserRuleContext {
		public EndPointContext endPoint() {
			return getRuleContext(EndPointContext.class,0);
		}
		public KindContext kind() {
			return getRuleContext(KindContext.class,0);
		}
		public EventTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eventType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterEventType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitEventType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitEventType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EventTypeContext eventType() throws RecognitionException {
		EventTypeContext _localctx = new EventTypeContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_eventType);
		try {
			setState(125);
			switch (_input.LA(1)) {
			case 7:
				enterOuterAlt(_localctx, 1);
				{
				setState(119); match(7);
				setState(120); kind();
				}
				break;
			case 21:
				enterOuterAlt(_localctx, 2);
				{
				setState(121); match(21);
				setState(122); kind();
				setState(123); endPoint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class KindContext extends ParserRuleContext {
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public KindContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_kind; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterKind(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitKind(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitKind(this);
			else return visitor.visitChildren(this);
		}
	}

	public final KindContext kind() throws RecognitionException {
		KindContext _localctx = new KindContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_kind);
		try {
			setState(129);
			switch (_input.LA(1)) {
			case 2:
			case 6:
			case 26:
			case 35:
				enterOuterAlt(_localctx, 1);
				{
				setState(127); primitive();
				}
				break;
			case IDENTIFIER:
				enterOuterAlt(_localctx, 2);
				{
				setState(128); struct();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrimitiveContext extends ParserRuleContext {
		public PrimitiveContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_primitive; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterPrimitive(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitPrimitive(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitPrimitive(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrimitiveContext primitive() throws RecognitionException {
		PrimitiveContext _localctx = new PrimitiveContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_primitive);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 2) | (1L << 6) | (1L << 26) | (1L << 35))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StructContext extends ParserRuleContext {
		public StructContext struct() {
			return getRuleContext(StructContext.class,0);
		}
		public TerminalNode IDENTIFIER() { return getToken(HealthWfMSParser.IDENTIFIER, 0); }
		public StructContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_struct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterStruct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitStruct(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitStruct(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StructContext struct() throws RecognitionException {
		StructContext _localctx = new StructContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_struct);
		try {
			setState(137);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(133); match(IDENTIFIER);
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(134); match(IDENTIFIER);
				setState(135); match(20);
				setState(136); struct();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode LPAREN() { return getToken(HealthWfMSParser.LPAREN, 0); }
		public Comparison_exprContext comparison_expr() {
			return getRuleContext(Comparison_exprContext.class,0);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public Logical_entityContext logical_entity() {
			return getRuleContext(Logical_entityContext.class,0);
		}
		public TerminalNode AND() { return getToken(HealthWfMSParser.AND, 0); }
		public TerminalNode RPAREN() { return getToken(HealthWfMSParser.RPAREN, 0); }
		public StatementContext statement() {
			return getRuleContext(StatementContext.class,0);
		}
		public TerminalNode OR() { return getToken(HealthWfMSParser.OR, 0); }
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HealthWfMSListener ) ((HealthWfMSListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HealthWfMSVisitor ) return ((HealthWfMSVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 22;
		enterRecursionRule(_localctx, 22, RULE_expression, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(147);
			switch ( getInterpreter().adaptivePredict(_input,10,_ctx) ) {
			case 1:
				{
				setState(140); statement();
				}
				break;

			case 2:
				{
				setState(141); comparison_expr();
				}
				break;

			case 3:
				{
				setState(142); match(LPAREN);
				setState(143); expression(0);
				setState(144); match(RPAREN);
				}
				break;

			case 4:
				{
				setState(146); logical_entity();
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(157);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(155);
					switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
					case 1:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(149);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(150); match(AND);
						setState(151); expression(7);
						}
						break;

					case 2:
						{
						_localctx = new ExpressionContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_expression);
						setState(152);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(153); match(OR);
						setState(154); expression(6);
						}
						break;
					}
					} 
				}
				setState(159);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}
